# Vulkan-LoaderAndValidationLayers

./: .travis.yml  BUILD.md  CMakeLists.txt  vk-layer-generate.py  vk_helper.py
build-android/: android-generate.bat  android-generate.sh  build.py  glslang_revision_android  shaderc_revision_android  spirv-tools_revision_android  update_external_sources_android.bat  update_external_sources_android.sh
demos/: cube.c  cube.cpp  tri.c
layers/: CMakeLists.txt  buffer_validation.cpp  buffer_validation.h  core_validation.cpp  core_validation_types.h  descriptor_sets.cpp  descriptor_sets.h  device_extensions.h  device_limits.cpp  dynamic_bitset.h  image.cpp  image_validation.cpp  image_validation.h  object_tracker.cpp  object_tracker.h  object_tracker_utils.cpp  parameter_validation.cpp  parameter_validation.h  parameter_validation_utils.cpp  parameter_validation_utils.h  shader_validation.cpp  shader_validation.h  spec.py  swapchain.cpp  swapchain.h  threading.cpp  threading.h  unique_objects.cpp  unique_objects.h  vk_layer_logging.h  vk_layer_utils.cpp  vk_layer_utils.h  vk_validation_error_database.txt  vk_validation_layer_details.md  vk_validation_stats.py
libs/ext_loader/: CMakeLists.txt
loader/: CMakeLists.txt  LoaderAndLayerInterface.md  debug_report.c  debug_report.h  dev_ext_trampoline.c  gpa_helper.h  loader.c  loader.h  phys_dev_ext.c  table_ops.h  trampoline.c  vk_loader_platform.h
scripts/: helper_file_generator.py  lvl_genvk.py  object_tracker_generator.py  parameter_validation2_generator.py  parameter_validation_generator.py  spec.py  vk.xml  (+3 more)
(+37 files in other folders)
